# MiLoMerge

./: LICENSE  docs_requirements.txt  pyproject.toml  requirements.txt  test_ROC.py  tester.py  timing_test.py
.github/workflows/: build.yml  test.yml
brunelle_merger/: ROC_tools.py  SUPER_ROC_Curves.py  brunelle_merger.py  helpers.py  histogram_helpers.py  jit_methods.py
docs/: .buildinfo  brunelle_merger.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_sources/: modules.rst.txt
docs/source/: Changelog.rst  Examples.rst  FAQ.rst  Mergers.rst  Metrics.rst  MiLoMerge.rst  Placement.rst  brunelle_merger.rst  conf.py  index.rst  modules.rst
optimized_binning/: ROC_curves.py  bin_optimizer.py  bin_split_bind.cpp  bin_splitter.cpp  bin_splitter.hpp  bin_splitter.py  makefile  place_from_map.py  test_split.cpp
optimized_binning/merging/: bin_optimizer.py  place_from_map.py  testing.ipynb
optimized_binning/metrics/: ROC_curves.py
optimized_binning/splitting/: makefile
optimized_binning/splitting/Inc/: bin_splitter.hpp
optimized_binning/splitting/Py/: bin_split_bind.cpp
optimized_binning/splitting/Src/: bin_splitter.cpp
optimized_binning/splitting/Test/: processCutLog.py  test_split.cpp  (+2 more)
src/MiLoMerge/: __init__.py
tests/: helpers.py  nonlocal_test.py  test_merge_local.py  test_merge_nonlocal.py  test_metadata.py  test_placement.py
tests/analytic_tests/: Analytic.py  tester.py
tests/four_lepton_tests/: tester.py
tests/split_test/: plot_hist.py  split_bins.py
(+3 files in other folders)
